Fishmode Plus:
---------------------------------------------------------------------------------------------------
Version: 0.1.2 
Date: 17. 04. 2024
  Balance Changes:
    - increased the value of complexity and time in fish recycling values for recipes, longer recipes should now yield much more of a fish surplus
---------------------------------------------------------------------------------------------------
Version: 0.1.1 
Date: 17. 04. 2024
  Balance Changes:
    - changed the numbers in the fish cost evaluation algorithm
    - raw resource recipes in furnaces now produce 2 per craft
---------------------------------------------------------------------------------------------------
Version: 0.1.0 
Date: 16. 04. 2024
  General:
    - Changed fish transmutation device asset to a recoloured version of nuclear reactor remnants
    - Added 5 new recipes for creating each raw resource from fish. Can be found in furnaces
    - Changed furnaces to work like assembling machines to accomodate the above change
    - Assembly machine pollution multiplier now doubles pollution by default. Can be changed in settings
    - Transmutation Devices now create pollution at a rate of 100/m, equal to 10 miners. 

  Balance Changes:
    - reduced biter time factor to 25 by default for biter evolution, to allow for the slower early game
    - doubled fish recipe values for copper and iron, left it the same for coal and stone. Iron and copper ore are value 1 now while coal and stone are value 0.5
    - fish now have a recipe value of one
    - algorithm value for complexity increased to 0.05
---------------------------------------------------------------------------------------------------
Version: 1.3.0 Fishmode (cakem), 0.0.0 Fishmode plus
Date: 04. 04. 2024
  Features:
    - Transmutation devices consume fish as a fuel source.
    - Transmutation devices can be affected by modules.
    - If you have lots of fish to spare, you can now craft your own Transmutation devices.