@@ -3,7 +3,8 @@ Fishmode Plus:
 Version: 0.1.2 
 Date: 17. 04. 2024
   Balance Changes:
-    - increased the value of complexity and time in fish recycling values for recipes, longer recipes should now yield much more of a fish surplus
+    - increased the value of complexity and time in fish recycling values for recipes
+    - fish no longer has a recipe value, it turns out this created issues with creating fish from transmutation devices where recipes wouldn't create much more than put in.
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.1 
 Date: 17. 04. 2024
